<resources>
    <string name="app_name">Five ways to wellbeing</string>

    <string name="launch_view_surveys">Your wellbeing log</string>
    <string name="launch_view_activity">View activities</string>
    <string name="launch_create_activity">Record activity</string>
    <string name="launch_answer_survey">Complete log</string>
    <string name="wellbeing_logs_title">Wellbeing logs</string>
    <string name="learn_more_title">Learn more</string>
    <string name="view_more">View more</string>
    <string name="wellbeing_graph_title">Your ways to wellbeing</string>
    <string name="wellbeing_insights_graph">Daily ways to wellbeing</string>
    <string name="activity_search_hint">Search for activity</string>
    <string name="create_non_existent_button">Create new</string>

    <string name="log_your_day_title">Keep track of your day</string>
    <string name="log_your_day_description">Record the activities you have done throughout the day, then complete your daily wellbeing log to check in on how things are going.</string>

    <!-- ToDo change this to before activities -->
    <string name="no_surveys_title">No wellbeing logs today</string>
    <string name="no_surveys_description">Do you want to complete one?</string>

    <string name="expand_button">Expand</string>
    <string name="add_activity_button">Activity</string>

    <string name="activity_title">Add activity details</string>
    <string name="activity_name">Activity name</string>
    <string name="activity_duration">Activity duration</string>
    <string name="activity_type">Activity type</string>

    <string name="survey_details_title">Wellbeing information</string>
    <string name="survey_input_title">Enter a title</string>
    <string name="survey_input_description">Enter a description</string>
    <string name="survey_input_activity">Select an activity</string>
    <string name="way_to_wellbeing_input">Select way to wellbeing</string>
    <string name="missed_days_title">Recover missed days</string>

    <string name="submit_button">Submit</string>
    <string name="navigation_home">Progress</string>
    <string name="navigation_surveys">History</string>
    <string name="navigation_activities">Activities</string>
    <string name="navigation_insights">Insights</string>

    <string name="wellbeing_insight_prefix">Times achieved:</string>
    <string name="wellbeing_insight_activities">View your activities</string>
    <string name="wellbeing_insight_activities_description">Find a list of all the activities you have completed</string>

    <string name="title_weekly_insights_overview">Weekly insights</string>
    <string name="description_weekly_insights_overview">Here\'s how you\'ve done in the last 7 days</string>

    <string name="wellbeing_connect">Connect</string>
    <string name="wellbeing_be_active">Be active</string>
    <string name="wellbeing_take_notice">Take notice</string>
    <string name="wellbeing_keep_learning">Keep learning</string>
    <string name="wellbeing_give">Give</string>
    <string name="wellbeing_unassigned">None</string>
    <string name="days_active">Days logged</string>

    <string name="wellbeing_connect_description">Connect is all about building relationships, in person or over video call it all counts, what really matters is that you spend time getting to know each other deeply, build a sense of trust, go deeper than the superficial, and most importantly make time to listen.</string>
    <string name="wellbeing_be_active_description">Be active is all about getting in some exercise, whether that be grabbing your yoga mat and taking on the downward dog, going for a short walk during your lunch break or training for your next marathon, make sure to keep it at a level you are comfortable with, if you don\'t feel better, change it up until you find something you love.</string>
    <string name="wellbeing_take_notice_description">Take notice is all about taking the time to reflect, look at the bigger picture, how was your day today? Make the most of the little things, put that phone down, stop scrolling. Ah, that\'s better, now you can enjoy the moment.</string>
    <string name="wellbeing_keep_learning_description">Keep learning is all about taking time to learn what you love. Growing your skills and finding a real sense of achievement in what you love to do. Whether it be a new skill or String Theory, get out there and start learning.</string>
    <string name="wellbeing_give_description">Giving is all about using what you have to benefit someone else. Whether that be giving a smile or a quick nod of the head to a stranger as you pass by or donning the apron for a charity bake sale, it all counts.</string>

    <string name="wellbeing_education_title">Learn more about the five ways to wellbeing</string>

    <string name="get_wellbeing_support">Wellbeing support</string>
    <string name="settings">Settings</string>

    <string name="button_visit_site">Visit site</string>
    <string name="button_timer">Set duration</string>
    <string name="button_start_time">Start</string>
    <string name="button_end_time">End</string>
    <string name="button_add_note">Note</string>
    <string name="button_save_note">Save note</string>
    <string name="hint_add_note">Enter a note</string>
    <string name="helper_saved_note">Saved</string>
    <string name="helper_unsaved_note">Press done to save changes</string>

    <string name="title_start_time">Start time</string>
    <string name="title_end_time">End time</string>
    <string name="title_delete_note">Delete your note</string>
    <string name="body_delete_note">Your note will be permanently deleted</string>
    <string name="title_delete_activity">Delete activity</string>
    <string name="body_delete_activity">Your activity will be removed from the activity list but will remain in previous wellbeing logs</string>
    <string name="body_delete_from_survey">Your activity will be removed from the survey but will still be available in the activity list</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_done">Done</string>
    <string name="button_edit">Edit</string>
    <string name="button_change">Change</string>
    <string name="button_missing_day">Add missed</string>
    <string name="automated_activity_text">This activity was automatically suggested based on your activity, do you want to add it?</string>
    <string name="update_five_dialog">In the latest update you can track app usage for the apps you choose and have more advanced options for physical activities. Why not head over to settings and configure the automatic activity logging.</string>

    <string name="minutes">mins</string>
    <string name="hours">hrs</string>

    <string name="survey_summary_title">Summary</string>

    <string name="today_title">Today</string>
    <string name="today_description">Here is how your day is looking so far</string>

    <string name="tracking_dialog_title">Automatic activity tracking</string>
    <string name="tracking_dialog_body">The app can automatically record walking, running, cycling and driving, you just need to enable the following permission.</string>
    <string name="tracking_dialog_positive_button">Next</string>

    <!-- Settings -->
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_description">Change the theme to dark, light or system default</string>
    <string name="settings_category_theme">Theme</string>
    <string name="settings_category_auto_tracking">Automatic Activity Recording</string>
    <string name="settings_category_auto_physical_tracking">Physical Activity</string>
    <string name="settings_category_auto_digital_tracking">Digital Activity</string>
    <string name="settings_category_notifications">Survey notifications</string>
    <string name="settings_category_auto_tracking_walk">Automatic walk activity</string>
    <string name="settings_category_auto_tracking_run">Automatic run activity</string>
    <string name="settings_category_auto_tracking_bike">Automatic cycle activity</string>
    <string name="settings_category_auto_tracking_vehicle">Automatic vehicle activity</string>
    <string name="settings_category_track_walks">Walk tracking</string>
    <string name="settings_switch_enable_walk_tracking">Track walks</string>
    <string name="settings_category_track_runs">Run tracking</string>
    <string name="settings_switch_enable_run_tracking">Track runs</string>
    <string name="settings_category_track_cycles">Cycle tracking</string>
    <string name="settings_switch_enable_cycle_tracking">Track cycles</string>
    <string name="settings_category_track_drives">Drive tracking</string>
    <string name="settings_switch_enable_drive_tracking">Track drives</string>
    <string name="settings_configure_apps">Configure which apps to track</string>
    <string name="settings_switch_enable_app_tracking">Track app usage</string>
    <string name="settings_minimum_duration">Minimum duration mins</string>


    <string name="error_no_name_entered">Please enter a name</string>
    <string name="error_no_type_selected">Please choose a type</string>
    <string name="error_no_way_to_wellbeing_selected">Please choose a way to wellbeing</string>

    <!-- Notifications -->
    <string name="notification_morning">Good morning! Are you ready to log some activities?</string>
    <string name="notification_noon">Remember to log your activities so far!</string>
    <string name="notification_night">Good evening, remember to log your activities</string>
    <string name="channel_name">Wellbeing log reminders</string>
    <string name="activity_channel_name">Automatic activity tracking</string>
    <string name="app_usage_channel_name">App usage tracking</string>
    <string name="notification_time_title">Select notification time</string>
    <string name="morning_preference_time_title">When do you want your morning notification</string>
    <string name="noon_preference_time_title">When do you want your noon notification</string>
    <string name="night_preference_time_title">When do you want your evening notification</string>
    <string name="morning_preference_switch_title">Do you want an morning notification</string>
    <string name="noon_preference_switch_title">Do you want a noon notification</string>
    <string name="night_preference_switch_title">Do you want an evening notification</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="night">Evening</string>
    <string name="preference_time_title">Time</string>
    <string name="preference_switch_title">Enable</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="is_walk_complete">Did you complete a walk?</string>
    <string name="is_run_complete">Did you complete a run?</string>
    <string name="is_cycle_complete">Did you complete a cycle?</string>
    <string name="is_drive_complete">Did you complete a drive?</string>
    <string name="is_app_add">Did you use</string>
    <string name="is_app_complete">recently?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>

    <string name="percentage_label">%</string>
    <string name="date_label">Date</string>

    <string name="old_activity_warning">Edit recommended</string>
    <string name="old_activity_warning_snackbar">Some activities don\'t have ways to wellbeing assigned edit recommended</string>

    <string name="suggestions_work_on">You could work on your</string>
    <string name="suggestions_activity">Suggested activity:</string>
    <string name="suggestions_best_activity">Most frequent:</string>
    <string name="suggestions_worst_activity">Suggested activity:</string>
    <string name="suggestions_improve_description">Doing this more regularly will help to boost your daily</string>
    <string name="suggestions_score">score</string>
    <string name="suggestions_best">You are doing best at</string>
    <string name="suggestions_favourite">Favourite activity:</string>
    <string name="suggestions_positive_description">You did this regularly over the last week - keep it up!</string>

    <string name="connect_suggestion">Get in touch with a friend</string>
    <string name="be_active_suggestion">Find a new way to exercise</string>
    <string name="keep_learning_suggestion">Take up a new hobby</string>
    <string name="take_notice_suggestion">Start a journal</string>
    <string name="give_suggestion">Lend a helping hand</string>
    <string name="default_suggestion">Get to know someone better</string>
    <string name="suggestions_insight_title_positive">Great job!</string>
    <string name="suggestions_insight_title_negative">Suggestions</string>

    <string name="start_walking">Started walking</string>
    <string name="stop_walking">Stopped walking</string>
    <string name="start_running">Started running</string>
    <string name="stop_running">Stopped running</string>
    <string name="start_cycling">Started cycling</string>
    <string name="stop_cycling">Stopped cycling</string>
    <string name="enter_vehicle">Enter vehicle</string>
    <string name="exit_vehicle">Exit vehicle</string>

    <!-- App tracking -->
    <string name="no_selection">-- None --</string>
    <string name="no_ways_to_wellbeing"/>
    <string name="no_activity_assigned">No activity assigned</string>
    <string name="auto_tracking_foreground_notification_title">Automatic activity logger</string>
    <string name="auto_tracking_foreground_notification_body">Tap to configure apps to track</string>
    <string name="logging_message">This will log</string>
    <string name="app_placeholder">App</string>
    <string name="activity_placeholder">Activity</string>
    <string name="walk">walk</string>
    <string name="run">run</string>
    <string name="cycle">cycle</string>
    <string name="vehicle">vehicle</string>

    <!-- Wellbeing support -->
    <string name="mind_title">Mind</string>
    <string name="mind_description">Tips and guides for managing with mental health problems.</string>
    <string name="nhs_title">NHS</string>
    <string name="nhs_description">Information about NHS mental health services.</string>
    <string name="resources_title">Self-help resources</string>
    <string name="resources_description">A selection of self-help resources.</string>
</resources>